--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ pydantic = "^1.9.1"
 beautifulsoup4 = "^4.11.1"
 SQLAlchemy = "^1.4.39"
 click = "^8.1.3"
+aiohttp = "^3.8.1"
 
 [tool.poetry.dev-dependencies]
 sqlalchemy-stubs = "^0.4"
